--- a/frontend/src/components/board-col/board-col.scss
+++ b/frontend/src/components/board-col/board-col.scss
@@ -8,21 +8,13 @@
     display: flex;
     flex-direction: column;
 
-    &.is_from {
-        border-color: $secondary;
-
-        & .board-col__header {
-            background-color: $secondary;
-            color: #fff;
-        }
-    }
-
     &.is_active {
-        border-color: $primary;
+        border-color: $grey_light;
+        border-style: dashed;
 
         & .board-col__header {
-            background-color: $primary;
-            color: #fff;
+            border-bottom-color: $grey_light;
+            border-bottom-style: dashed;
         }
     }
 
@@ -42,21 +34,21 @@
         position: absolute;
         top: -5px;
         right: -10px;
-        background-color: $purple;
+        background-color: $grey_light_super;
+        border: 1px solid $grey_light_easy;
         padding: 0 10px;
         display: flex;
         align-items: center;
         justify-content: center;
-        color: #fff;
         font-weight: bold;
 
         &:before {
             position: absolute;
             content: '';
             top: calc(100% - 1px);
-            right: -10px;
+            right: -11px;
             border: 10px solid transparent;
-            border-left-color: darken($purple, 10%); 
+            border-left-color: darken($grey_light_easy, 10%); 
             border-top-width: 0;
             z-index: -1;
         }
