--- a/frontend/src/components/card-list/card-list.scss
+++ b/frontend/src/components/card-list/card-list.scss
@@ -13,7 +13,7 @@
         height: 100%;
         overflow-x: hidden;
         overflow-y: auto;
-        padding: 15px;
+        padding: 15px 15px 0;
         display: flex;
         flex-direction: column;
     }
@@ -26,11 +26,8 @@
         }
     }
 
-    
-}
-
-.card-list__fill {
-    // position: relative;
-    flex: 1;
-    // z-index: 5;
+    &__fill {
+        flex: 1;
+        min-height: 15px;
+    }
 }
