--- a/frontend/src/components/board-col/board-col.scss
+++ b/frontend/src/components/board-col/board-col.scss
@@ -22,12 +22,20 @@
         display: flex;
         align-items: center;
         padding: 10px 15px;
-        border-bottom: 1px solid $grey_light_easy;    
+        border-bottom: 1px solid $grey_light_easy;
+        
+        @media(max-width: 1366px) {
+            padding: 8px 10px;
+        }
     }
 
     &__title {
         font-weight: bold;
         font-size: 20px;
+
+        @media(max-width: 1366px) {
+            font-size: 17px;
+        }
     }
 
     &__count {
@@ -41,6 +49,11 @@
         align-items: center;
         justify-content: center;
         font-weight: bold;
+
+        @media(max-width: 1366px) {
+            top: -4px;
+            right: -7px;
+        }
 
         &:before {
             position: absolute;
