--- a/frontend/src/components/board/board.scss
+++ b/frontend/src/components/board/board.scss
@@ -7,4 +7,9 @@
     grid-column-gap: 20px;
     padding: 20px 0;
     min-height: 100vh;
+
+    @media(max-width: 1366px) {
+        grid-column-gap: 10px;
+        padding: 10px 0;
+    }
 }
