--- a/frontend/src/components/card/card.scss
+++ b/frontend/src/components/card/card.scss
@@ -10,6 +10,10 @@
     transition: 0.1s ease-in-out;
     z-index: 2;
 
+    @media(max-width: 1366px) {
+        padding: 10px;
+    }
+
     &.is_hidden {
         display: none;
     }
@@ -39,7 +43,7 @@
     }
 
     &__title {
-        margin: 10px 0 5px;
+        margin: 7px 0 5px;
         font-weight: bold;
         font-size: 16px;
 
